# zenith

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
.railway/: config.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  worker_main.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_strategy_backtest_fields.py  0003_role_and_backtest_runs.py  0004_backtest_is_public.py  0005_symbols_with_market_type.py  0006_exchange_sync_state.py  0007_add_last_error_to_user_exchanges.py  0008_worker_exchange_and_symbols.py  0009_drop_worker_margin.py  0010_exchange_demo_mode.py  42aaeb3634bc_worker_symbol_margins.py
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  auth.py  exchanges.py  referral.py  subscriptions.py  trading.py  wallet.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: bootstrap.py
backend/app/exchange/: order_executor.py
backend/app/models/: __init__.py  backtest.py  exchange.py  referral.py  strategy.py  subscription.py  trade.py  user.py  validation_task.py  wallet.py  worker.py
backend/app/schemas/: exchange.py  referral.py  strategy.py  subscription.py  trade.py  user.py  wallet.py  worker.py
backend/app/services/: backtesting.py  dca_strategy.py  deposit_address.py  exchange.py  exchange_factory.py  macd_strategy.py  mlm.py  wallet.py
backend/app/strategies/: __init__.py
backend/app/utils/: pg_notify.py
backend/app/workers/: blockchain_listener.py  exchange_sync_loop.py  market_listener.py  order_stream.py  validation_loop.py
(+116 files in other folders)
