[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zenith-backend"
version = "0.1.0"
description = "Zenith FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.29",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.0",
    "pydantic-settings==2.2.1",
    "email-validator==2.3.0",
    "python-jose[cryptography]==3.4.0",
    "bcrypt==5.0.0",
    "python-multipart==0.0.22",
    "ccxt==4.2.95",
    "web3==6.15.1",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "pytest==8.1.1",
    "pytest-asyncio==0.23.6",
]

[tool.setuptools.packages.find]
include = ["app*"]
